# lem_in

./: .gitignore  CMakeLists.txt  Makefile  author  find_valid_path.c  helper_f_find_vl_path.c  helper_f_find_vl_path2.c  hlp_f_run_ants.c  input_data.txt  input_data2.txt  input_data3.txt  input_data4.txt  input_data5.txt  input_data6.txt  lem-in  libftlemin.h  main.c  read_data.c  run_ants.c  t.txt  t2.txt
inc/: libftlemin.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isdigit.c  ft_isprint.c  ft_lstadd.c  ft_lstaddend.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_memccpy.c  ft_memcpy.c  ft_putchar.c  ft_strcat.c  ft_strdel.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strmapi.c  ft_strncat.c  ft_strstr.c  ft_strsub.c  ft_tolower.c  ft_toupper.c  get_next_line.c  libft.h
libft/ft_printf/: Makefile
libft/ft_printf/inc/: libftprintf.h
libft/ft_printf/src/: cnt_o_x_b.c  determ_types.c  fill_struct.c  fns_for_ddgt.c  fns_for_fl.c  ft_atoi.c  ft_bzero.c  ft_cnt_i_d_u_ua_c.c  ft_determ_argc.c  ft_determine_flgs.c  ft_f_prn_unicd.c  ft_for_pr_cca_ssa.c  ft_for_print_args.c  ft_isspace.c  ft_memset.c  ft_outp_float.c  ft_print_pct.c  ft_printf.c  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strnew.c  ft_with_flags.c  fts_f_output_dgt.c  if_flgs_o_x_b.c  init_arr.c  itoa_a_e_f_g.c  itoa_printf.c  itoa_printf_o_x_b.c  lib_printf.c  print_cca_ssa.c  print_unicode.c
libft/inc/: libft.h
libft/src/: ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isspace.c  ft_itoa.c  ft_lstcnt.c  ft_lstdel.c  ft_lstiter.c  ft_lstrvrs.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strequ.c  ft_strlen.c  ft_strmap.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strtrim.c  (+1 more)
src/: find_valid_path.c  ft_free_mem.c  helper_f_find_vl_path.c  hlp_f_run_ants.c  hlpr_f_try_read.c  main.c  read_data.c  run_ants.c  try_read.c
