cmake_minimum_required(VERSION 3.12)
project(lem_in C)

set(CMAKE_C_STANDARD 99)

include_directories(.)

include_directories(libft/ft_printf/inc)

add_executable(lem_in src/main.c
        libftlemin.h
        libft/ft_printf/src/ft_printf.c
        libft/get_next_line.c
        libft/ft_lstcnt.c
        libft/ft_memmove.c
        libft/ft_lstmap.c
        libft/ft_strtrim.c
        libft/ft_strnstr.c
        libft/ft_memcpy.c
        libft/ft_memset.c
        libft/ft_putnbr_fd.c
        libft/ft_strclr.c
        libft/ft_toupper.c
        libft/libft.h
        libft/ft_memalloc.c
        libft/ft_strmap.c
        libft/ft_strequ.c
        libft/ft_strdup.c
        libft/ft_strsub.c
        libft/ft_strlen.c
        libft/ft_isascii.c
        libft/ft_lstnew.c
        libft/ft_strrchr.c
        libft/ft_lstiter.c
        libft/ft_strsplit.c
        libft/ft_strjoin.c
        libft/ft_putendl.c
        libft/ft_strlcat.c
        libft/ft_isdigit.c
        libft/ft_lstrvrs.c
        libft/ft_strnequ.c
        libft/ft_strcmp.c
        libft/ft_strstr.c
        libft/ft_isalpha.c
        libft/ft_memccpy.c
        libft/ft_lstaddend.c
        libft/ft_memchr.c
        libft/ft_bzero.c
        libft/ft_strncpy.c
        libft/ft_sqrt.c
        libft/ft_strmapi.c
        libft/ft_lstadd.c
        libft/ft_strncmp.c
        libft/ft_memdel.c
        libft/ft_strcat.c
        libft/ft_putstr_fd.c
        libft/ft_putnbr.c
        libft/ft_memcmp.c
        libft/ft_putchar_fd.c
        libft/ft_striter.c
        libft/ft_isprint.c
        libft/ft_striteri.c
        libft/ft_putendl_fd.c
        libft/ft_lstdel.c
        libft/ft_itoa.c
        libft/ft_strdel.c
        libft/ft_isspace.c
        libft/ft_strncat.c
        libft/ft_lstdelone.c
        libft/ft_strnew.c
        libft/ft_strcpy.c
        libft/ft_atoi.c
        libft/ft_tolower.c
        libft/ft_strchr.c
        libft/ft_putchar.c
        libft/ft_isalnum.c
        libft/ft_putstr.c
        src/read_data.c
        src/find_valid_path.c
        src/run_ants.c
        src/ft_free_mem.c
        src/helper_f_find_vl_path.c
        src/hlpr_f_try_read.c
        src/hlp_f_run_ants.c
        src/try_read.c
        libft/ft_printf/src/cnt_o_x_b.c
        libft/ft_printf/src/determ_types.c
        libft/ft_printf/src/fill_struct.c
        libft/ft_printf/src/fns_for_ddgt.c
        libft/ft_printf/src/fns_for_fl.c
        libft/ft_printf/src/ft_cnt_i_d_u_ua_c.c
        libft/ft_printf/src/ft_determ_argc.c
        libft/ft_printf/src/ft_determine_flgs.c
        libft/ft_printf/src/ft_f_prn_unicd.c
        libft/ft_printf/src/ft_for_pr_cca_ssa.c
        libft/ft_printf/src/ft_for_print_args.c
        libft/ft_printf/src/ft_outp_float.c
        libft/ft_printf/src/ft_print_pct.c
        libft/ft_printf/src/ft_with_flags.c
        libft/ft_printf/src/fts_f_output_dgt.c
        libft/ft_printf/src/if_flgs_o_x_b.c
        libft/ft_printf/src/init_arr.c
        libft/ft_printf/src/itoa_a_e_f_g.c
        libft/ft_printf/src/itoa_printf.c
        libft/ft_printf/src/itoa_printf_o_x_b.c
        libft/ft_printf/src/lib_printf.c
        libft/ft_printf/src/print_cca_ssa.c
        libft/ft_printf/src/print_unicode.c
        )
